dev client integration

--- a/ios/ANIMATEDFITNESS/Info.plist
+++ b/ios/ANIMATEDFITNESS/Info.plist
@@ -22,6 +22,8 @@
     <string>1.0.0</string>
     <key>CFBundleSignature</key>
     <string>????</string>
+    <key>NSCameraUsageDescription</key>
+    <string>$(PRODUCT_NAME) needs access to your Camera.</string>
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
