--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,8 @@ target 'ANIMATEDFITNESS' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
+  pod 'GoogleMLKit/PoseDetection', '3.1.0'
+
   use_react_native!(
     :path => config[:reactNativePath],
     :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
