🔧 chore(eas.json): add buildConfiguration property with value "Debug" to ios configuration to specify the build configuration for iOS builds

--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,8 @@
         "gradleCommand": ":app:assembleDebug"
       },
       "ios": {
-        "simulator": true
+        "simulator": true,
+        "buildConfiguration": "Debug"
       }
     },
     "preview": {
