🐛 fix(index.tsx): add console log to check available camera devices 🎨 style(index.tsx): update Camera component style to have a fixed width and height of 500 🐛 fix(eas.json): remove "simulator" key from "development" configuration to fix build issue ✨ feat(eas.json): add "development-simulator" configuration to enable development client and internal distribution for simulator builds

--- a/eas.json
+++ b/eas.json
@@ -10,8 +10,17 @@
         "gradleCommand": ":app:assembleDebug"
       },
       "ios": {
-        "simulator": true,
         "buildConfiguration": "Debug"
+      }
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+          "gradleCommand": ":app:assembleDebug"
+      },
+      "ios": {
+          "buildConfiguration": "Debug"
       }
     },
     "preview": {
